# mcp-searxng-bridge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.adoc
src/: error.rs  main.rs  mcp.rs  state.rs
src/handlers/: messages.rs
